@@ -1,3 +1,6 @@
+* 2005-05-24 Jeremy Sanders <jeremy@jeremysanders.net>
+	- Fix axis positioning in stacked plot where one margin is zero
+	
 * 2005-05-19 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Make size of property window more sensible by default
 	- Documentation update
